# OpenTimelineIO

./: .clang-format  .codecov.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  .travis.yml  ADOPTERS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  LICENSE.txt  MANIFEST.in  Makefile  NOTICE.txt  OTIO_VERSION.json  Package.swift  README.md  README_contrib.md  SECURITY.md  VERSIONS.md  codecov.yml  meson.build  meson_options.txt  mkdocs.yml  pyproject.toml  readthedocs-conda.yml  setup.cfg  setup.py  tox.ini
examples/: CMakeLists.txt  build_simple_timeline.py  bundle.cpp  conform.cpp  conform.py  cut_diff.py  diff_video_track.cpp  flatten_video_tracks.cpp  flatten_video_tracks.py  io_perf_test.cpp  maya_sequencer.py  python_adapters1.cpp  python_adapters2.cpp  python_adapters_child_process.cpp  python_adapters_embed.cpp  shot_detect.py  summarize_timing.cpp  summarize_timing.py  to_otiod.cpp  to_otioz.cpp  upgrade_downgrade_example.cpp  util.cpp  util.h
examples/sample_plugin/: setup.py
examples/swift-package-manager/: Package.swift  README.md
src/: .gitignore  CMakeLists.txt  OpenTimelineIO-Version.h.in  meson.build
src/c-opentimelineio/: CMakeLists.txt
src/java-opentimelineio/: .gitignore  CMakeLists.txt  build.gradle  overview.html  settings.gradle
src/opentime/: CMakeLists.txt  OpenTimeConfig.cmake.in  box.h  errorStatus.cpp  errorStatus.h  export.h  meson.build  point.h  rationalTime.cpp  rationalTime.h  stringPrintf.h  timeRange.cpp  timeRange.h  timeTransform.cpp  timeTransform.h  version.h  version.h.in
src/opentimelinediff/: CMakeLists.txt  otiodiff.cpp  trackDiff.cpp  trackDiff.h
src/opentimelineio/: CMakeLists.txt  CORE_VERSION_MAP.cpp  CORE_VERSION_MAP.last.cpp  FAMILY_LABEL_MAP.cpp  OpenTimelineIOConfig.cmake.in  any.h  anyDictionary.h  anyVector.h  audioMixMatrix.cpp  audioMixMatrix.h  bounds.cpp  bounds.h  bundle.cpp  bundle.h  bundleOtiod.cpp  bundleOtioz.cpp  bundlePrivate.cpp  bundlePrivate.h  bundleUtils.cpp  bundleUtils.h  clip.cpp  clip.h  color.cpp  color.h  colorManagementEffects.cpp  colorManagementEffects.h  composable.cpp  composable.h  composition.cpp  composition.h  deserialization.cpp  deserialization.h  editAlgorithm.cpp  editAlgorithm.h  effect.cpp  effect.h  errorStatus.cpp  errorStatus.h  export.h  externalReference.cpp  (+89 more)
src/opentimelineview/: __init__.py  clip_inspector_widget.py  console.py  details_widget.py  display_widget.py  ges_renderer.py  ruler_widget.py  settings.py  timeline_widget.py  track_widgets.py
src/py-opentimelineio/: CMakeLists.txt  exceptions.py  meson.build  opentime.py
src/spm-build/: rapidjson
src/swift-opentimelineio/: Algorithms.swift  Clip.swift  Composable.swift  Composition.swift  CxxAny.h  CxxAny.mm  CxxAnyDictionaryIterator.h  CxxAnyDictionaryIterator.mm  CxxAnyDictionaryMutationStamp.h  CxxAnyDictionaryMutationStamp.mm  CxxAnyVectorMutationStamp.h  CxxAnyVectorMutationStamp.mm  CxxRetainer.h  CxxRetainer.mm  CxxVectorProperty.h  Effect.swift  Errors.swift  ExternalReference.swift  FreezeFrame.swift  Gap.swift  GeneratorReference.swift  Item.swift  LinearTimeWarp.swift  Marker.swift  MediaReference.swift  Metadata.swift  MetadataDictionary.swift  MissingReference.swift  README.md  RationalTime.swift  SerializableCollection.swift  SerializableObject.swift  SerializableObjectWithMetadata.swift  Stack.swift  TimeEffect.swift  Timeline.swift  Track.swift  Transition.swift  UnknownSchema.swift  WrapperCache.swift  (+6 more)
tests/: CMakeLists.txt  baseline_reader.py  main.cpp  requirements.txt  test_adapter_plugin.py  test_ale_adapter.py  test_bounds.py  test_box2d.py  test_builtin_adapters.py  test_bundle.cpp  test_cdl.py  test_clip.cpp  test_clip.py  test_cmx_3600_adapter.py  test_color.py  test_color_management_effects.cpp  test_color_management_effects.py  test_composable.py  test_composition.cpp  test_composition.py  test_console.py  test_coordinate_system_reference.py  test_core.py  test_core_utils.py  test_cxx_sdk_bindings.py  test_documentation.py  test_editAlgorithm.cpp  test_effect.py  test_examples.py  test_fcp7_xml_adapter.py  test_filter_algorithms.py  test_find_children.cpp  test_generator_reference.py  test_hooks_plugins.py  test_image_sequence_reference.py  test_item.py  test_json_backend.py  test_marker.py  test_media_linker.py  test_media_reference.py  (+50 more)
tests/baseline/: adapter_example.json  adapter_plugin_manifest.plugin_manifest.json  empty_clip.json  empty_external_reference.json  empty_filler.json  empty_gap.json  empty_marker.json  empty_missingreference.json  empty_sequence.json  empty_serializeable_collection.json  empty_stack.json  empty_timeline.json  empty_timerange.json  empty_timetransform.json  empty_transition.json  example.py  media_linker_example.json
tests/baselines/: adapter_example.json  adapter_plugin_manifest.plugin_manifest.json  custom_adapter_hookscript_example.json  custom_adapter_hookscript_example.py  empty_clip.json  empty_color.json  empty_effect.json  empty_external_reference.json  empty_gap.json  empty_generator_reference.json  empty_marker.json  empty_missingreference.json  empty_rationaltime.json  empty_serializable_collection.json  empty_stack.json  empty_timeline.json  empty_timerange.json  empty_timetransform.json  empty_track.json  empty_transition.json  example.py  exampleSchemaDef.py  example_schemadef.py  hookscript_example.json  media_linker_example.json  post_write_example.py  post_write_hookscript_example.json  schemadef_example.json
tests/consumer/: CMakeLists.txt
tests/sample_data/: 25fps.edl  avid_example.edl  big_int.otio  cdl.edl  clip_example.otio  dissolve_test.edl  dissolve_test_2.edl  dissolve_test_3.edl  dissolve_test_4.edl  effects.otio  empty_name_tags.xml  enabled.otio  frame_debugger_0h.mov  frame_debugger_1h.mov  gap_test.edl  generator_reference_test.otio  hiero_xml_export.xml  mixed_tabs_test.edl  multi_audio.edl  multiple_track.otio  multitrack.otio  nested_example.otio  no_spaces_test.edl  nucoda_example.edl  preflattened.otio  premiere_example.edl  (+18 more)
(+997 files in other folders)
