[build-system]
requires = ["mesonpep517"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
summary="Editorial interchange format and API"
author="Pixar Animation Studios"
author-email="opentimelineio@pixar.com"
home-page="http://opentimeline.io"
description= """OpenTimelineIO is an interchange format and API for
editorial cut information. OTIO is not a container format for media, rather it
contains information about the order and length of cuts and references to
external media.

OTIO includes both a file format and an API for manipulating that format. It
also includes a plugin architecture for writing adapters to convert from/to
existing editorial timeline formats. It also implements a dependency- less
library for dealing strictly with time, opentime.

You can provide adapters for your video editing tool or pipeline as needed.
Each adapter allows for import/export between that proprietary tool and the
OpenTimelineIO format."""
classifiers=[
    'Development Status :: 4 - Beta',
    'Topic :: Multimedia :: Graphics',
    'Topic :: Multimedia :: Video',
    'Topic :: Multimedia :: Video :: Display',
    'Topic :: Multimedia :: Video :: Non-Linear Editor',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: Other/Proprietary License',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Operating System :: OS Independent',
    'Natural Language :: English',
]
meson-python-option-name = "python_version"
requires_dist = [
    'pyaaf2==1.2.0',
]

[tool.mesonpep517.entry-points]
console_scripts = [
    'otioview = opentimelineview.console:main',
    'otiocat = opentimelineio.console.otiocat:main',
    'otioconvert = opentimelineio.console.otioconvert:main',
    'otiostat = opentimelineio.console.otiostat:main',
    'otioautogen_serialized_schema_docs = opentimelineio.console.autogen_serialized_datamodel:main',
]